# maxai-finance

./: .gitignore  LICENSE  PRODUCT.md  README.md  modelcard.md  predictions.csv  preds_plan.csv  pyproject.toml
.github/workflows/: hf-push.yml
scripts/: pack_hf.py  score_cash.py  train_cash.py
space/: requirements.txt
src/maxai/: api.py  cli.py  features.py  io.py  models.py  space_app.py  synthetic.py
